# lyra-radeye-msgs

./: CMakeLists.txt  README.md  package.xml
epd2/: CMakeLists.txt  package.xml
epd2/msg/: EPD2_Message.msg
epd2/scripts/: dual_epd_node.py  epd_node.py  epd_node_MK25.py  epd_node_N2.py
epd2/scripts/old/: EPD_N2_node.py  EPD_backup_node.py
lidar_reconstruction/: CMakeLists.txt  lidar_filters.yaml  motorDefine.yaml  motor_joint.yaml  package.xml
lidar_reconstruction/launch/: controller_manager.launch  lidar_joint_controller.launch  lidar_recon_bringup.launch  rosbag_jackal_record.launch  rotate_lidar_recon_bringup.launch  sick_bringup.launch  state_publisher.launch
lidar_reconstruction/scripts/: ThetaCameraControl.py  laser_assembler_client.py  rotate_motor.py  setMotorSpeed.py
lidar_reconstruction/srv/: TakeImage.srv
lidar_reconstruction/urdf/: lidar_recon.urdf  lidar_recon_vega.urdf  lidar_recon_vega.urdf.xacro
msg/: Radeye.msg
radeye/: 99-radeye.udev  CMakeLists.txt  README.md  package.xml
radeye/config/: example_topics.json  g10_topics.json  magnox_radeye_topics.json  magnox_topics.json.bk
radeye/datasets/: Fri Nov 20 15_58_16 2020.csv  Fri Nov 20 16_13_54 2020.csv  Sun May 16 10_30_28 2021.csv  Sun May 16 11_08_17 2021.csv  Sun May 16 11_23_39 2021.csv  Sun May 16 12_11_29 2021.csv  Wed Dec  2 15_15_39 2020.csv
radeye/include/radeye/: RadEyeCom.h  radeye.h  radeye_daisychain.h
radeye/scripts/: radeye_radiation_point_visualiser.py  random_tf.py
radeye/src/: radeye_daisychain_node.cpp  radeye_node.cpp
radeye/srv/: ClearRadiationData.srv  GenCSV.srv
vega/: CMakeLists.txt  package.xml
vega/launch/: rad_sensors.launch  robot.launch  vega.launch  vega_base.launch  vega_base_urdf.launch  vega_manipulation.launch  vega_manipulation_upload.launch  vega_manipulation_view.launch  vega_slam.launch  vega_urdf.launch
vega/launch/includes/: description.launch.xml
vega/meshes/: VEGA_Assembly.stl  track_assembly.stl
vega/nodes/: vega_teleop_key
vega/rviz/: vega.rviz
vega/scripts/: cmd_vel_mux.py
vega/urdf/: common_properties.xacro  open_manipulator_vega.urdf.xacro  vega_for_open_manipulator.urdf.xacro  vega_manipulation_robot.urdf.xacro  vega_robot.urdf.xacro  vega_robot_base.urdf.xacro
vega/vega_core/: PD_comms_lib.py  comms_example.py  comms_example_on.py  vega.h  vega_core_config.h
vega_tools/: CMakeLists.txt  CMakeLists.txt.laptop  package.xml  setup.py  vega.rviz
vega_tools/gui/: vega_gui.cpp  vega_gui.h
vega_tools/launch/: vega3D.launch  vega_teleop_key.launch
vega_tools/msg/: SignalStrength.msg
vega_tools/nodes/: vega_teleop_key
vega_tools/scripts/: .cmd_vel_mux.py.swp  PD_comms_lib.py  cmd_vel_mux.py  comms_example.py  comms_example_off.py  heartbeat_emitter.py  heartbeat_receiver.py  light_control.py  readCurrent.py  reduce_cam_resolution.py  rtb_controller.py  signal_strength_alarm.py
vega_tools/urdf/: vega.urdf.xacro
vega_tools/vega_core/: comms_example.py  comms_example_on.py  vega_core.ino
